# recoverops-lab

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  WORKLOG.md  ansible.cfg  compose.yml  pyproject.toml  requirements-dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  rehearsal.yml
ansible/playbooks/: backup.yml  disaster.yml  restore.yml  seed.yml  verify.yml
ansible/roles/backup/tasks/: main.yml
ansible/roles/database_seed/tasks/: main.yml
ansible/roles/disaster/tasks/: main.yml
ansible/roles/restore/tasks/: main.yml
ansible/roles/verify/tasks/: main.yml
app/: Dockerfile  requirements.txt
app/recoverops_api/: __init__.py  main.py
docs/: ARCHITECTURE.md  OPERATIONS.md  PROJECT_PLAN.md
lab/: init.sql  schema.sql  seed.sql
scripts/: bootstrap.sh  lab.sh
src/recoverops/: __init__.py  cli.py  config.py  database.py  evidence.py  report.py  restic.py  runner.py  safety.py  state.py
tests/: test_api.py  test_cli.py  test_config.py  test_database.py  test_evidence.py  test_project_contract.py  test_report.py  test_restic.py  test_safety.py  test_state.py
