[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "recoverops-lab"
version = "0.1.0"
description = "Automated PostgreSQL disaster-recovery rehearsal and evidence lab"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Steven Espinoza" }]
dependencies = [
  "psycopg[binary]==3.3.4",
]

[project.scripts]
recoverctl = "recoverops.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src", "app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
